--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,11 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+.collabignore
